--- a/scull/Makefile
+++ b/scull/Makefile
@@ -32,7 +32,7 @@ endif
 
 
 clean:
-	rm -rf *.o *~ core .depend .*.cmd *.ko *.mod.c .tmp_versions *.symvers *.order
+	rm -rf *.o *.mod.c *~ core .depend .*.cmd *.ko *.mod.c .tmp_versions *.symvers *.order
 
 depend .depend dep:
 	$(CC) $(CFLAGS) -M *.c > .depend
